Fixed alignment and readability

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,16 +1,12 @@
 body
 {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr, 1fr, 1fr;
+    text-align: center;
     justify-content: center;
     background-color: #a6a6a6;
     margin: 0;
-    color: #1b5dac;
-}
-
-#Title
-{
-    display: flex;
-    justify-content: center;
+    color: white;
 }
 
 .link
